--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="ig_key">B8D3DAB3CD634687AA21649DC1D4B72D</string>
     <string name="total_confirmed_cases">TOTAL CONFIRMED CASES</string>
     <string name="total_death_cases">Total Death Cases</string>
+    <string name="total_recovered_cases">Total Recovered Cases</string>
+    <string name="total_active_cases">Total Active Cases</string>
+    <string name="region">Region</string>
 
 
 </resources>
